app/SowingMeWeb/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  labels:
    cattle.io/creator: norman
  name: sowingme-web
  namespace: live-dev
  selfLink: /apis/networking.k8s.io/v1/namespaces/live-dev/ingresses/sowingme-web
spec:
  rules:
  - host: sowingme-web.dev.ubixsys.com
    http:
      paths:
      - backend:
          service:
            name: sowingme-web
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - sowingme-web.dev.ubixsys.com
      secretName: tls-wildcard-ubixsys-dev
status:
  loadBalancer:
    ingress:
      - hostname: kube-001.brainchurts.com
      - hostname: kube-002.brainchurts.com
      - hostname: kube-003.brainchurts.com
      - hostname: kube-004.brainchurts.com
