app/SowingMeWeb/sandbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  name: sowing-me-web
  namespace: live-sandbox
  selfLink: /apis/networking.k8s.io/v1/namespaces/live-sandbox/ingresses/sowing-me-web
spec:
  rules:
  - host: sowing-me.sb.ubixsys.com
    http:
      paths:
      - backend:
          service:
            name: sowing-me-web
            port:
              number: 80
        path: /
        pathType: Prefix
