app/SowingMeWeb/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  labels:
    cattle.io/creator: norman
  name: sowing-me-web
  namespace: live-staging
  selfLink: /apis/networking.k8s.io/v1/namespaces/live-staging/ingresses/sowing-me-web
spec:
  ingressClassName: nginx
  rules:
  - host: sowing-me-web.staging.ubixsys.com
    http:
      paths:
      - backend:
          service:
            name: sowing-me-web
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - sowing-me-web.staging.ubixsys.com
      secretName: tls-wildcard-ubixsys-staging
status:
  loadBalancer:
    ingress:
      - hostname: kube-001.brainchurts.com
      - hostname: kube-002.brainchurts.com
      - hostname: kube-003.brainchurts.com
      - hostname: kube-004.brainchurts.com
